--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
       </footer>
     </div>
 
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal="">
     <div class="modal">
       <button type="button" class="close-button" data-modal-close>X</button>
     </div>
